chore(amplify): add API environment variables to build config
Configure environment variables for API authentication and endpoint URL in Amplify build configuration. Adds VAIL_API_BEARER_TOKEN for API authentication and NEXT_PUBLIC_API_URL for the API endpoint, enabling proper API communication during build and runtime.

--- a/amplify.yml
+++ b/amplify.yml
@@ -16,3 +16,7 @@ frontend:
       - .npm/**/*
       - .next/cache/**/*
       - node_modules/**/*
+env:
+  variables:
+    VAIL_API_BEARER_TOKEN: $VAIL_API_BEARER_TOKEN
+    NEXT_PUBLIC_API_URL: $NEXT_PUBLIC_API_URL
