--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# internal deployment docs (not for public repo)
+AMPLIFY_DEPLOYMENT.md
+
 # vercel
 .vercel
 
